# rust_use_arrow

./: .gitignore  Cargo.toml  README.md  onnx_example.py  predict_onnx.py  requirements.txt  save_pred.py
src/: main.rs  read_parquet_example.rs  rust_apply_udf_example.rs
