[package]
name = "rust_use_arrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "48.0.0"
onnxruntime = "0.0.13"
parquet = {version = "48.0.0", features = ["async"]}
polars = {version = "0.34.2", features = ["parquet", "lazy", "dtype-array"]}
tokio = {version = "1.33.0", features = ["full"]}
